# strawberry-fastapi-product-service

./: .env.example  .gitignore  Dockerfile  IssueDescription.md  Makefile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 32d3c0365a00_initial.py  6b57c8b1b478_change_fields.py
src/: main.py
src/common/: constants.py  di.py  exceptions.py  graphql_schema.py  middlewares.py  repo.py  settings.py  uow.py
src/common/base/: dto.py  repo.py  uow.py
src/common/base/graphql/: resolvers.py  schemas.py
src/common/db/: sqlalchemy.py
src/common/db/mongo/: base.py  config.py
src/common/db/sqlalchemy/: base.py  config.py  extensions.py  models.py
src/common/graphql/: mutations.py  pagination.py  query.py
src/common/graphql/base/: resolvers.py  schemas.py
src/common/logging/: formatters.py
src/common/utils/: __init__.py  fields.py  graphql.py  parsers.py
src/graphql/: schema.py
src/graphql/users/: schemas.py
src/graphql/users/resolvers/: base.py  users.py
src/products/: dto.py
src/products/graphql/: schemas.py
src/products/graphql/converters/: products.py  reviews.py
src/products/graphql/resolvers/: product.py  products.py  review.py  reviews.py
src/products/graphql/schemas/: products.py  reviews.py
src/products/repositories/: base.py
src/products/services/: products.py  reviews.py
src/users/: dto.py  service.py
src/users/graphql/: converter.py  resolver.py  schemas.py
src/users/graphql/schemas/: inputs.py  mutations.py  queries.py  query.py
src/users/repositories/: base.py
(+15 files in other folders)
